...
    <string name="bottom_navigation_activities">"Activities"</string>
    <string name="bottom_navigation_shop">"Shop"</string>
    <string name="settings_help_title">"Help"</string>
    <string name="guided_brushing_title">"Guided brushing"</string>
    <string name="guided_brushing_start_message">"Turn on brush and get to brushing! "</string>
...
    <string name="guided_brushing_legend_missed">"Missed"</string>
    <string name="guided_brushing_legend_brushing_segment">"Brushing segment"</string>
    <string name="ok">"OK"</string>
    <string name="something_went_wrong">"Something went wrong. Please try again later."</string>
    <string name="settings_section_brushing_details_title">"%1$s's brusher details"</string>
...
    <string name="dialog_test_brushing_remind_later_button">"Remind me later, please"</string>
    <string name="guided_brushing_no_feedback">"You’re doing great, keep going!"</string>
    <string name="settings_item_delete_account">"Delete account"</string>
    <string name="guided_brushing_wrong_zone_feedback">"Check your zone"</string>
    <string name="guided_brushing_too_fast_feedback">"You're brushing too fast!"</string>
...
    <string name="guided_brushing_start_screen_no_more_smiles">"Earn 2 points each time you play, up to 6 points per day."</string>
    <string name="guided_brushing_start_screen_start_button">"LET’S START"</string>
    <string name="cancel">"Cancel"</string>
    <string name="settings_vibration_levels">"Brushing program"</string>
    <string name="brushing_sync_progress_text">"syncing brushing sessions: %d%%"</string>
...
    <string name="brushing_quiz_screen_3_answer_2_hint">"Medium vibration"</string>
    <string name="brushing_quiz_screen_3_answer_3_hint">"Lowest vibration"</string>
    <string name="settings_item_guided_brushing">"Guided brushing settings"</string>
    <string name="gb_settings_toolbar_title">"guided brushing"</string>
    <string name="gb_settings_header1">"general"</string>
    <string name="gb_settings_brushing_movement">"Display brushing movements"</string>
    <string name="gb_settings_help_texts">"Display help texts"</string>
    <string name="gb_settings_header2">"Sounds"</string>
    <string name="gb_settings_music">"Music"</string>
    <string name="gb_settings_transition_sound">"Transition sounds"</string>
    <string name="gb_settings_choose_music">"Choose music"</string>

    <!-- The dot at the end of the translation need to stay for the higlight -->
    <string name="checkup_your_results">"Your results."</string>
    <string name="checkup_brushing_summary">"Brushing summary"</string>
    <string name="save_changes">"Save Changes"</string>

    <!-- Fuzzy -->
    <string name="unknown">"Not set"</string>
    <string name="email">"email"</string>
    <string name="brushing_streak_accept_challenge">"Accept Challenge"</string>
    <string name="brushing_quiz_your_program">"your brushing program is"</string>
...

    <!-- Fuzzy -->
    <string name="settings_weekly_digest_title">"Receive my weekly review"</string>

    <!-- Fuzzy -->
    <string name="settings_weekly_digest_description">"Yes, please send my review"</string>
    <string name="settings_get_my_data">"Get my data"</string>
    <string name="quiz_confirmation_brushing_program">"CONFIRM PROGRAM"</string>

...

    <!-- Fuzzy -->
    <string name="settings_share_your_data_title">"Get the most out of your data"</string>

    <!-- Fuzzy -->
    <string name="settings_share_your_data_description">"Help us improve the accuracy of the motion sensors by sending us your brushing data anonymously"</string>
    <string name="tb_settings_toolbar_title">"Brush details"</string>
    <string name="tb_settings_connect_new_tb">"Connect a New Brush"</string>
...
    <string name="tb_settings_identify">"Identify"</string>
    <string name="tb_settings_blink">"Make your brush blink"</string>
    <string name="settings_brushing_time">"Brushing Time"</string>
    <plurals name="settings_brushing_time_format_minutes">
        <item quantity="one">"%d minute"</item>
...
    <string name="settings_brushing_time_minutes_label">"minutes"</string>
    <string name="settings_brushing_time_seconds_label">"seconds"</string>
    <string name="settings_share_your_data_learn_more">"Learn more"</string>
    <string name="tb_settings_battery_level">"Battery Level"</string>
    <string name="tb_settings_brush_condition_header">"Brush condition"</string>
...
    <!-- App will redirect the user to this link after tapping on learn more -->
    <string name="toolbox_home_smile_points_details_url">"https://colgateconnect.zendesk.com/hc/en-us/articles/360014152960/preview/eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpZCI6MzYwMDE0MTUyOTYwLCJleHAiOjE1OTEwMTA4MDB9.9f2p0zNIhJiP9NN8VZ9ojUQ3giPdmVbrWs0pcCYzUfA"</string>
    <string name="settings_born_header">"Birthday"</string>
    <string name="guided_brushing_mouth_map_left">"L"</string>
    <string name="guided_brushing_mouth_map_right">"R"</string>
...
    <string name="pairing_grant_location_permission_error">"Please grant Location permission"</string>
    <string name="pairing_enable_location">"Please enable Location"</string>
    <string name="settings_profile_gender_male">"Male"</string>
    <string name="settings_profile_gender_female">"Female"</string>
    <string name="settings_profile_handedness_left">"Left"</string>
    <string name="settings_profile_handedness_right">"Right"</string>
    <string name="settings_delete_account">"Delete my account"</string>
    <string name="settings_delete_account_popup_message">"Are you really sure you want to delete your account? This operation is not reversible."</string>
    <string name="settings_delete_account_popup_yes">"yes, delete my account"</string>
    <string name="settings_get_my_data_popup_title">"Success"</string>
    <string name="settings_get_my_data_popup_message">"An email allowing you to retrieve all your data will be sent to %s shortly."</string>
    <string name="settings_logout_title">"Logout"</string>
    <string name="settings_logout_message">"Do you really want to log out?"</string>
    <string name="settings_profile_information_name">"First Name"</string>
    <string name="settings_profile_information_name_hint">"Your first name"</string>
    <string name="settings_profile_information_gender_hint">"Gender"</string>
    <string name="settings_profile_information_handedness_hint">"Handedness"</string>
    <string name="settings_item_about">"About"</string>
    <string name="settings_terms_of_use_terms">"Terms &amp; Conditions"</string>
    <string name="settings_terms_of_use_policy">"Privacy Policy"</string>
    <string name="secret_settings">"Secret Settings"</string>
    <string name="legacy_secret_settings">"Legacy Secret Settings"</string>
    <string name="settings_item_admin_settings">"admin settings"</string>

    <!-- Please remember that this string needs to contain `onboarding_get_ready_header_highlight` (like trailing fullstop) - otherwise highlight won't be rendered -->
...
    <string name="offline_brushing_notification_multiple_with_smiles_content">"And won %1$s Smiles!"</string>
    <string name="settings_about_screen_title">"about"</string>
    <string name="settings_about_screen_facebook">"Facebook"</string>
    <string name="settings_about_screen_twitter">"Twitter"</string>
    <string name="settings_about_screen_website">"Website"</string>
    <string name="settings_about_screen_app_version">"App version"</string>
    <string name="settings_about_screen_account_id">"Account ID"</string>
    <string name="checkup_delete_button">"Delete brushing session"</string>
    <string name="settings_screen_title">"Settings"</string>
    <string name="profile_picture_dialog_title">"Set your picture"</string>
    <string name="change_avatar_take_picture">"Take picture"</string>
...
    <string name="profile_header_text">"Use your smile to change the world,
don’t let the world change your smile!"</string>
