<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="rewards_terms_url" tools:ignore="ExtraTranslation">"https://shop.colgate.com/pages/rewards-terms"</string>
  <string name="oral_care_support_url" tools:ignore="ExtraTranslation">"https://www.colgate.com/en-us/oral-health"</string>
  <string name="terms_url">"https://shop.colgate.com/pages/terms-of-service"</string>
  <string name="help_center_url">"https://humsupport.colgate.com/"</string>
  <string name="privacy_url" translatable="false">"https://shop.colgate.com/pages/privacy"</string>
  <string name="contact_us_url">"https://humsupport.colgate.com/hc/en-us"</string>
</resources>

