...
    android:visibility="gone"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/title_text"
    style="?materialAlertDialogTitleTextStyle"
    android:layout_width="@dimen/match_constraints"
    android:layout_height="wrap_content"
    android:layout_marginStart="?alertDialogInsetStart"
    android:layout_marginTop="?alertDialogInsetTop"
    android:layout_marginEnd="?alertDialogInsetEnd"
...
    app:layout_constraintEnd_toStartOf="@id/picker_major_label"
    app:layout_constraintHorizontal_chainStyle="packed"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/body_text">

    <NumberPicker
      android:id="@+id/picker_major"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </FrameLayout>

  <TextView
    android:id="@+id/picker_major_label"
...
    android:theme="@style/ThemeOverlay.KolibreeNumberPicker"
    app:layout_constraintEnd_toStartOf="@id/picker_minor_label"
    app:layout_constraintStart_toEndOf="@id/picker_major_label"
    app:layout_constraintTop_toBottomOf="@id/body_text">

    <NumberPicker
      android:id="@+id/picker_minor"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content" />
  </FrameLayout>

  <TextView
    android:id="@+id/picker_minor_label"
...
