...
      android:layout_height="@dimen/match_constraints"
      app:constraint_referenced_ids="appbar"
      app:endElevation="@dimen/dot_half"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:scrollDistance="@dimen/dot_oct"
      app:scrollingView="@id/settings_recycler_view"
      app:startElevation="@dimen/zero" />

    <com.google.android.material.appbar.AppBarLayout
      android:id="@+id/appbar"
      android:layout_width="@dimen/match_constraints"
      android:layout_height="wrap_content"
...
          android:onClick="@{() -> viewModel.onCloseClick()}"
          android:padding="@dimen/dot_double"
          android:src="@drawable/ic_back_arrow"
          app:tint="?android:textColorPrimary" />

        <TextView
          android:id="@+id/toolbar_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="@dimen/dot_double"
          android:text="@string/settings_screen_title"
          android:textAppearance="?textAppearanceHeadline4"
          android:textColor="?android:textColorPrimary" />
...
